# NoctisPro-version1-complete

./: .env.dev.example  .env.docker  .env.example  .env.prod  .env.prod.example  .env.production  .env.production.example  .gitignore.production  ACTUAL_WORKING_IMPLEMENTATION_SUMMARY.md  AI_PRELIMINARY_REPORTS_RADIOLOGIST_VERIFICATION_SUMMARY.md  CANVAS_FIXES_SUMMARY.md  CLEANUP_AND_TEST_SUMMARY.md  CLEANUP_COMPLETE.md  COMPLETE_FIXES_SUMMARY.md  COMPLETE_SYSTEM_GUIDE.md  COMPREHENSIVE_SMOKE_TEST_REPORT.md  CREATE_PULL_REQUEST.md  DEPLOYMENT_COMPLETED.txt  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  DICOM_ADDITIONAL_ENHANCEMENTS.md  DICOM_VIEWER_ACTUAL_FIX.md  DICOM_VIEWER_AND_UI_COMPREHENSIVE_FIXES.md  DICOM_VIEWER_COMPLETE_FIX.md  DICOM_VIEWER_FIXES.md  DICOM_VIEWER_FIXES_APPLIED.md  DICOM_VIEWER_FIXES_SUMMARY.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_UBUNTU_22.04.md  DOCKER_TAILSCALE_DEPLOYMENT.md  DONE.md  Dockerfile  Dockerfile.production  FASTAPI_DJANGO_RUST_INTEGRATION_GUIDE.md  FASTAPI_INTEGRATION_SUMMARY.md  FINAL_REMAINING_ISSUES_SUMMARY.md  FINAL_STATUS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FUNCTIONALITY_VERIFICATION.md  (+110 more)
.archive_old_docs/: AI_ANALYSIS_DICOM_VIEWER_FIXES_SUMMARY.md  AI_ANALYSIS_ENHANCEMENT_SUMMARY.md  ANSWER_FRONTEND_TEMPLATES.md  CHANGES_APPLIED.txt  DICOM_VIEWER_FIX_SUMMARY.md  DICOM_VIEWER_FIX_VERIFICATION.md  FINAL_SUMMARY.md  FRONTEND_TEMPLATE_REFINEMENT.md  (+15 more)
dicom_scp_server/: .env.example  Cargo.toml  Dockerfile  README.md  config.json  config.prod.json
dicom_scp_server/src/: config.rs  database.rs  main.rs  scp.rs  storage.rs
(+211 files in other folders)
