[package]
name = "dicom_scp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
dicom = "0.6"
dicom-object = "0.6"
dicom-transfer-syntax-registry = "0.6"
dicom-dictionary-std = "0.6"
dicom-ul = "0.6"
dicom-pixeldata = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
bytes = "1.0"
anyhow = "1.0"
thiserror = "1.0"